--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "build:prod": "cross-env NODE_ENV=production node scripts/build.js",
-    "build:dev": "cross-env NODE_ENV=development node scripts/build.js"
+    "build": "cross-env NODE_ENV=development node scripts/build.js",
+    "start": "cross-env NODE_ENV=development node scripts/dev.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.27.5",
     "cross-env": "^7.0.3",
     "esbuild": "^0.12.16",
     "typescript": "^4.3.5"
